style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

* {
    font-family: 'Roboto', sans-serif;
}

body {
    height: 100vh;
    margin: 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
}

.header {
    background-color: #1f2937;
    display: flex;
    justify-content: space-between;
    align-items: center;
    
   
}



.header,
.hero,
.content .padded,
.footer {
    padding-left: 15%;
    padding-right: 15%;
}

.header-logo{
    color: #F9FAF8;
    font-size: 24px;
    font-weight: 900;
}

.header ul{
    font-size: 18px;
    list-style-type: none;
    display: flex;
    gap: 24px;
    color: #E5E7EB;
}

.content {
    display: flex;
    flex-direction: column;
    flex: 1;

    align-items: stretch;
   
}

.footer {
    background-color: #1f2937;
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 24px;
   
}

.hero,
.random-info,
.quote,
.call-to-action{
    flex:1;
}

.hero{
    color: #F9FAF8;
    background-color: #1f2937;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 5%;
    padding-bottom: 5%;
    gap: 32px;

}

.random-info {
    flex:1
}

.quote{
    flex:1;
    background-color: #E5E7EB;
    padding-top: 100px;
    padding-bottom: 100px;
    padding-right: 30%;
    padding-left: 30%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}



.awesome button {
    background-color: #3882F6;
    color: #F9FAF8;
    font-size: 16px;
    padding: 8px 24px;
    border-radius: 10px;
    border-width: 0px;
}

.awesome {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    flex: 1;
}

.awesome p {
    font-size: 24px;;
    color: #E5E7EB;
    font-weight: 5;
    margin:0;
}

.hero-container {

    display: flex;
    align-items: center;
    justify-content: center;
}

.hero img{
    height: 300px;
    width: 150;
    border-radius: 10%;
}

.random-info h2{
    text-align: center;
    font-weight: 900;
    font-size: 36px;
}

.images-subtext{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 48px;
}

.images-subtext-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0;
    
}

.square{
    box-sizing: border-box;
    background-color: white;
    border: solid #3882F6 4px;
    border-radius: 10%;
    height: 150px;
    width: 150px;
    padding: 0;
    margin: 0;
}

.images-subtext-container p{
    max-width: 200px;
    font-size: 18px;
    color: #1F2937;
}

.random-info {
    margin-top: 28px;
    margin-bottom: 100px;

}

.text-quote{
    font-size: 36px;
    color: #1F2937;
    
}

.roboto-light-italic {
    font-family: "Roboto", serif;
    font-weight: 300;
    font-style: italic;
    font-size: 36px;
    color: #1F2937;
  }

.author{
    text-align: right;
    
    font-size: 36px;
    font-style: bold;
    
}

.call-to-action-container{
    margin-top: 100px;
    margin-bottom: 100px;
    padding: 5% 15%;
    background-color: #3882F6;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.call-to-action-text{
    font-size: 36px;
    font-weight: 300;
    color: #F9FAF8;
}

.call-to-action-secondary-text{
    font-size: 18px;
    font-weight: 100;
    color: #E5E7EB;
}

.call-to-action-button{
    background-color: #3882F6;
    border: #F9FAF8 3px solid;
    font-size: 24px;
    padding: 8px 24px;
    border-radius: 10px;
    color: #F9FAF8;

}

